# UR5-and-UR3-simulation

./: README.md
two_arms/: CMakeLists.txt
two_arms/launch/: start.launch
two_arms/scripts/: kineUr3.py  kinematicsUr3.py  motionGroupPosController.py  motionGroupPosControllerCopy.py  testmotion (copia).py  testmotion.py  trajectory.py  trygripper.py
two_arms/worlds/: double.world
universal_robot/ur_description/: CMakeLists.txt
universal_robot/ur_description/urdf/: ur3.urdf.xacro  ur3_robot.urdf.xacro  ur5.urdf.xacro  ur5_robot.urdf.xacro
universal_robot/ur_gazebo/controller/: arm_controller_ur3.yaml  arm_controller_ur5.yaml
universal_robot/ur_gazebo/launch/: controller_utils.launch  ur3.launch  ur5.launch
